astro/src/css/style.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.font-mono {
  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
}

lite-youtube {
  @apply aspect-video;
  max-width: none !important;
}

@layer components {
  .deprecated {
    color: theme('textColor.red.700');
  }

  .since {
    color: theme('textColor.green.600');
  }
}

